# okrapp

./: CLAUDE.md  LICENSE  README.md  docker-compose.yml  spec.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: auth.py  celery_app.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  assessment.py  goal.py  organization.py  user.py  users_organizations.py
backend/app/routers/: assessments.py  auth.py  goals.py  organizations.py  users.py
backend/app/schemas/: goal.py  organization.py  user.py
backend/tests/: conftest.py  test_auth.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  goals.ts  organizations.ts
frontend/src/components/: NavBar.tsx  ProgramCard.tsx  ProtectedRoute.tsx
frontend/src/pages/: GoalForm.tsx  GoalPage.tsx  Home.tsx  ProgramDetail.tsx  Programs.tsx
frontend/src/pages/admin/: Admin.tsx  AdminPrograms.tsx  AdminUsers.tsx
